--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,38 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Apis Trainig</title>
 </head>
+
 <body>
-    <h1 class="text-3xl font-bold underline text-center">
-     Apis training
+    <h1 class="text-3xl font-bold text-center pt-5 pb-5">
+        Apis training
     </h1>
-    
+    <div class="flex justify-center">
+        <div class="w-1/3 bg-white rounded-lg shadow ">
+            <ul class="divide-y-2 divide-gray-100">
+
+                <a href="https://trainingliveview.fly.dev/" target="_blank">
+                    <li class="p-3 flex justify-between hover:bg-blue-600 hover:text-blue-200 duration-700">
+
+                        LiveView Training
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-blue-600" fill="none"
+                            viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
+                        </svg>
+
+
+                    </li>
+                </a>
+
+
+                <li class="p-3">List Item 2</li>
+                <li class="p-3">List Item 3</li>
+                <li class="p-3">List Item 4</li>
+            </ul>
+        </div>
+    </div>
+
+
 </body>
+
 </html>
