--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <title>Apis Trainig</title>
 </head>
 
-<body>
-    <h1 class="text-3xl font-bold text-center pt-5 pb-5">
+<body class="bg-zinc-900">
+    <h1 class="text-3xl font-bold text-center pt-5 pb-5 text-violet-500">
         Apis training
     </h1>
     <div class="flex justify-center">
-        <div class="w-1/3 bg-white rounded-lg shadow ">
+        <div class="w-1/3 rounded-lg shadow ">
             <ul class="divide-y-2 divide-gray-100">
 
                 <a href="https://trainingliveview.fly.dev/" target="_blank">
-                    <li class="p-3 flex justify-between hover:bg-blue-600 hover:text-blue-200 duration-700">
+                    <li class="p-3 flex justify-between hover:bg-blue-600 hover:text-blue-200 duration-700 text-violet-500">
 
                         LiveView Training
                         <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-blue-600" fill="none"
@@ -32,9 +32,9 @@
                 </a>
 
 
-                <li class="p-3">List Item 2</li>
-                <li class="p-3">List Item 3</li>
-                <li class="p-3">List Item 4</li>
+                <li class="p-3 text-violet-500">List Item 2</li>
+                <li class="p-3 text-violet-500">List Item 3</li>
+                <li class="p-3 text-violet-500">List Item 4</li>
             </ul>
         </div>
     </div>
